feat: add engines field to specify Node.js version in package.json

--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "photo_backend",
   "license": "ISC",
   "author": "",
+  "engines": {
+    "node": "24.x"
+  },
   "type": "module",
 
   "scripts": {
