fix: update Node.js version to 22.x in package.json and vercel.json; add desktop.ini

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
   "version": 2,
   "functions": {
-    "api/*/*.js": {
-      "runtime": "nodejs20.x"
+    "api/server.js": {
+      "runtime": "nodejs22.x"
     }
   },
   "routes": [
