--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,16 @@
 {
-  "version": 2,
-  "functions": {
-    "api/server.js": {
-      "runtime": "nodejs22.x"
-    }
-  },
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "api/server.js"
-    }
-  ]
+ "version": 2,
+ "builds": [
+  {
+   "src": "api/server.js",
+   "use": "@vercel/node",
+   "config": { "includeFiles": ["dist/**"] }
+  }
+ ],
+ "routes": [
+  {
+   "src": "/(.*)",
+   "dest": "api/server.js"
+  }
+ ]
 }
